--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
 
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Redirect</title>
+</head>
+<body>
+<div><span>Redirecting...</span></div>
+
+<script>
+    setTimeout(function () {
+        document.location.href = "http://husker-dev.byethost7.com/"
+    }, 1)
+</script>
+</body>
+</html>
