--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Redirect</title>
+    <title>Furry Map Net - Wayback</title>
 </head>
 <body>
 <div><span>Redirecting...</span></div>
