--- a/index.html
+++ b/index.html
@@ -1,16 +1,258 @@
-
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Furry Map Net - Wayback</title>
-</head>
-<body>
-<div><span>Redirecting...</span></div>
+    <title>Furry Map Net - Wayback data</title>
 
-<script>
-    setTimeout(function () {
-        document.location.href = "http://husker-dev.byethost7.com/"
-    }, 1)
-</script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+            font-family: 'Roboto', sans-serif;
+        }
+        html, body, #map {
+            height: 100%;
+            width: 100%;
+        }
+        .info-title-pane{
+            display: block;
+            width: 100%;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+            border-radius: 0 0 13px 13px;
+        }
+        .info-title-text{
+            display: table-cell;
+            text-align: center;
+            vertical-align: middle;
+            height: 43px;
+            width: 100%;
+            font-weight: 500;
+            font-size: 23px;
+        }
+        .profile-image{
+            margin-top: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+
+        }
+        .info-block{
+            height: 35px;
+            display: flex;
+            margin-bottom: 7px
+        }
+        .info-block .title{
+            display: flex;
+            align-items:center;
+            width: calc(40% - 10px);
+            height: 100%;
+            line-height: 35px;
+            text-align: left;
+            padding-left: 10px;
+
+            box-shadow: 0 0 7px rgba(0, 0, 0, 0.3);
+            border-radius: 20px 0 0 20px;
+
+            font-weight: 600;
+            font-size: 16px;
+        }
+        .info-block .content{
+            display: table-cell;
+            width: 60%;
+            height: 100%;
+            line-height: 35px;
+            text-align: center;
+
+            box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.2);
+            border-radius: 0 20px 20px 0;
+
+            font-size: 16px;
+        }
+        .info-block .title i{
+            margin-right: 10px;
+            font-size: 1.5em;
+        }
+        .info-pane{
+            display: block;
+            width: calc(100% - 20);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+            padding: 10px;
+            border-radius: 13px;
+        }
+
+   </style>
+
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/58890d7d6d.js" crossorigin="anonymous"></script>
+
+    <!-- Leaflet -->
+    <link rel="stylesheet" href="leaflet/leaflet.css" />
+    <script src="leaflet/leaflet.js"></script>
+    <script src="leaflet-color-markers/leaflet-color-markers.js"></script>
+
+    <!-- Marker cluster -->
+    <link rel="stylesheet" href="marker-cluster/MarkerCluster.css" />
+    <link rel="stylesheet" href="marker-cluster/MarkerCluster.Default.css"/>
+    <script src="marker-cluster/leaflet.markercluster-src.js"></script>
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
+
+    <!-- Sidebar-v2 library -->
+    <script src="sidebar/L.Control.Sidebar.js"></script>
+    <link rel="stylesheet" href="sidebar/L.Control.Sidebar.css"/>
+
+    <script>
+        function getURLContent(url){
+            return new Promise(function (resolve, reject) {
+                let xhr = new XMLHttpRequest();
+                xhr.open("GET", url, true);
+                xhr.onload = function () {
+                    if (this.status >= 200 && this.status < 300) {
+                        resolve(xhr.response);
+                    } else {
+                        reject({
+                            status: this.status,
+                            statusText: xhr.statusText
+                        });
+                    }
+                };
+                xhr.onerror = function () {
+                    reject({
+                        status: this.status,
+                        statusText: xhr.statusText
+                    });
+                };
+                xhr.send();
+            });
+        }
+
+        let markers;
+
+        async function onLoad() {
+            markers = L.markerClusterGroup();
+            
+            /*
+            let f1 = loadFurryMapNet();
+            let f2 = loadFurMapNet();
+
+            await f1;
+            await f2;
+            */
+
+            let map = L.map('map').setView([51.505, 0], 3);
+            L.tileLayer(`https://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}${window.devicePixelRatio > 1 ? "@2x" : ""}.png`, { 
+                attribution: 'Map data &copy; OpenStreetMap and contributors', 
+            }).addTo(map);
+            map.addLayer(markers);
+            let sidebar = L.control.sidebar('sidebar', {
+                position: 'right'
+            }).addTo(map);
+            sidebar.show();
+
+            document.getElementById('loading_pane').style.visibility = 'hidden';
+            document.getElementById('sidebar').style.visibility = 'visible';
+        }
+        async function loadFurryMapNet(){
+            try{
+                let content = await getURLContent("furrymapnet_data.json");
+                let usersData = JSON.parse(content)['combined']['geojson']['features'];
+                for (let i = 0; i < usersData.length; i++) {
+                    let user = usersData[i];
+                    let marker = L.circleMarker([user[1], user[0]], {
+                        radius: 10, color: 'grey'
+                    }).bindTooltip(`${user[5]} | ${user[3]}`);
+
+                    markers.addLayer(marker);
+                }
+            }catch{
+                console.log("Can't load furrymap.net content");
+            }
+        }
+        async function loadFurMapNet(){
+            try{
+                let content = await getURLContent("https://hg7h7jw5wc.execute-api.us-east-1.amazonaws.com/dev/map");
+                let usersData = JSON.parse(content);
+                for (let i = 0; i < usersData.length; i++) {
+                    let user = usersData[i];
+                    let marker = L.circleMarker([user.a, user.o], {
+                        radius: 10, color: 'blue'
+                    }).bindTooltip(user.u);
+
+                    markers.addLayer(marker);
+                }
+            }catch{
+                console.log("Can't load furmap.net content");
+            }
+        }
+    </script>
+</head>
+<body onload="setTimeout(onLoad, 100);">
+    <div id="map"/>
+    <table style="width: 100%; height: 100%; position: absolute" id="loading_pane" >
+        <tr>
+            <td>
+                <div style="vertical-align: middle;" align="center">
+                    <img src="https://vk.com/sticker/1-4307-512" height="200em" style="margin: 0 0 2em 0;"  alt="loading"/>
+                    <a class="loading"></a>
+                    <object type="image/svg+xml" data="loading.svg" width="80em" height="80em" >Unsupported SVG</object>
+                </div>
+                
+            </td>
+        </tr>
+    </table>
+
+    <div id="sidebar" style="visibility: hidden; padding: 0;border-radius:13px">
+
+        <div style="vertical-align: middle;" align="center">
+            <div class="info-title-pane">
+                <div class="info-title-text" id="profile-name">Husker</div>
+            </div>
+            <img src="empty-profile.png" width="220em" alt="profile-image" class="profile-image" id="profile-image"/>
+
+            <div class="info-pane">
+                <div style="font-size: 20px;margin-bottom: 10px;">Information</div>
+                <div class="info-block" style="margin-bottom: 25px">
+                    <div class="title">Source:</div>
+                    <div class="content">furrymap.net</div>
+                </div>
+                <div class="info-block">
+                    <div class="title"><i class="fab fa-github"></i>GitHub</div>
+                    <div class="content">husker-dev</div>
+                </div>
+                <div class="info-block">
+                    <div class="title"><i class="fab fa-vk"></i>VK</div>
+                    <div class="content">shtengauer_nikita</div>
+                </div>
+                <div class="info-block">
+                    <div class="title"><i class="fab fa-reddit"></i>Reddit</div>
+                    <div class="content">shtengauer_nikita</div>
+                </div>
+                <div class="info-block">
+                    <div class="title"><i class="fab fa-discord"></i>Discord</div>
+                    <div class="content">shtengauer_nikita</div>
+                </div>
+                <div class="info-block">
+                    <div class="title"><i class="fab fa-skype"></i>Skype</div>
+                    <div class="content">shtengauer_nikita</div>
+                </div>
+                <div class="info-block">
+                    <div class="title"><i class="fab fa-deviantart"></i>Deviantart</div>
+                    <div class="content">shtengauer_nikita</div>
+                </div>
+                <div class="info-block">
+                    <div class="title"><i class="fab fa-soundcloud"></i>Soundcloud</div>
+                    <div class="content">shtengauer_nikita</div>
+                </div>
+                <div class="info-block">
+                    <div class="title"><i class="fas fa-paw"></i>Furaffinity</div>
+                    <div class="content">shtengauer_nikita</div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
