--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             let sidebar = L.control.sidebar('sidebar', {
                 position: 'right'
             }).addTo(map);
-            sidebar.show();
+            //sidebar.show();
 
             document.getElementById('loading_pane').style.visibility = 'hidden';
             document.getElementById('sidebar').style.visibility = 'visible';
