--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
                     markers.addLayer(marker);
                     marker.on('click', function(e) {
-                        applyInfo('furrymap.net', '/empty-profile.png', user[5], user[3]);
+                        applyInfo('furrymap.net', 'furry-map-wayback/empty-profile.png', user[5], user[3]);
 
                         sidebar.show();
                     });
@@ -276,7 +276,7 @@
             <div class="info-title-pane">
                 <div class="info-title-text" id="profile-name">Name</div>
             </div>
-            <img src="empty-profile.png" width="220em" alt="profile-image" class="profile-image" id="profile-image"/>
+            <img src="furry-map-wayback/empty-profile.png" width="220em" alt="profile-image" class="profile-image" id="profile-image"/>
 
             <div class="info-pane">
                 <div style="font-size: 20px;margin-bottom: 10px;">Information</div>
